# tracker

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  setup.py
tracker/: hooks.py  install.py  patches.txt
tracker/api/: response.py
tracker/api/v1/: activity.py  audit.py  filters.py  hierarchy.py  projects.py  reports.py  tasks.py  tickets.py  timesheets.py
tracker/patches/v0_1_0/: unsubmit_activity_sessions.py
tracker/permissions/: capabilities.py  hierarchy.py  queries.py  roles.py
tracker/public/css/: tracker.css
tracker/public/js/: tracker.js  tracker_vue.js
tracker/services/: activity.py  assign.py  audit.py  notify.py  review.py
tracker/setup/: __init__.py  demo_data.py  demo_org.py
tracker/tracker/config/: desktop.py  docs.py
tracker/tracker/doctype/tracker_activity_session/: tracker_activity_session.json  tracker_activity_session.py
tracker/tracker/doctype/tracker_settings/: tracker_settings.json  tracker_settings.py
tracker/tracker/page/tracker_hours/: tracker_hours.js  tracker_hours.json
tracker/tracker/page/tracker_org/: tracker_org.js  tracker_org.json
tracker/tracker/page/tracker_workbench/: tracker_workbench.js  tracker_workbench.json
tracker/tracker/workspace/tracker/: tracker.json
tracker/tracker/workspace_sidebar/: __init__.py  tracker.json
