[project]
name = "tracker"
version = "0.1.0"
description = "Tracker — simple ERPNext project / task / ticket tracking"
authors = [{ name = "ZatGo Innovation" }]
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = []

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["tracker*"]
